objects/rh2__PS_Use_Case_Library__mdt.object
<CustomObject>
    <fields>
        <fullName>rh2__Child_Object__c</fullName>
        <label>Child Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Components_Included__c</fullName>
        <label>Components Included</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Delim__c</fullName>
        <label>Delim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__FieldType__c</fullName>
        <label>FieldType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Filter_Conditions__c</fullName>
        <label>Filter Conditions</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Logic__c</fullName>
        <label>Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Relationship_Field__c</fullName>
        <label>Relationship Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Source_Field__c</fullName>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Rollup Helper Use Case Library</label>
    <pluralLabel>Rollup Helper Use Case Libraries</pluralLabel>
</CustomObject>